Monitoring/example-4/certs-manager/letsencrypt-issuer/dns01/2-grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
  annotations:
    cert-manager.io/issuer: le-dns01-staging
spec:
  ingressClassName: external-nginx
  rules:
    - host: grafana.svestor.link
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
  tls:
    - hosts:
        - grafana.svestor.link
      secretName: grafana-svestor-link-tls
